# django-microservice

./: .env  .env.example  .gitignore  docker-compose.yml
Accounts/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.sh
Accounts/account/: admin.py  forms.py  handlers.py  models.py  serializers.py  signals.py  urls.py  views.py
Accounts/account/grpc/: account.proto  account_pb2.py  account_pb2_grpc.py
Accounts/account/management/commands/: wait_for_db.py
Accounts/account/migrations/: 0001_initial.py
Accounts/authentication/: authentication.py
Accounts/settings/: env.py  settings.py  urls.py
Accounts/settings/django/: base.py
Auth/: .env.example  Dockerfile  example-rsa.pem  example-rsa.pub  private_key.pem  public_key.pem  pyproject.toml  run.sh  serve.sh  test.py
Auth/apps/account/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py
Auth/apps/account/migrations/: 0002_alter_user_password.py  0006_profile_created_profile_updated_user_updated_and_more.py  0007_alter_otptoken_options_otptoken_is_active.py  0009_alter_user_phone.py
Auth/apps/api/: urls.py
Auth/apps/api/tests/pagination/: test_get_paginated_response.py
Auth/apps/authentication/: apis.py  models.py  serializers.py  services.py  urls.py
Auth/apps/authentication/tests/apis/: test_user_login.py
Auth/apps/blog_examples/: apps.py
Auth/apps/blog_examples/migrations/: 0001_initial.py
Auth/apps/common/: models.py
Auth/apps/common/migrations/: 0001_initial.py
Auth/apps/errors/: apis.py  services.py
Auth/apps/files/: models.py  services.py
Auth/apps/files/migrations/: 0001_initial.py  0002_initial.py
Auth/apps/old_account/: models.py
Auth/apps/old_account/management/commands/: wait_for_db.py
Auth/apps/old_account/migrations/: 0003_remove_profile_point_remove_profile_total_paid_and_more.py  0004_address_unique_address_profile_unique_profile.py  0005_remove_profile_total_point.py  0008_alter_otptoken_token.py  0010_alter_user_phone.py
Auth/apps/old_authentication/: tokens.py
Auth/apps/testing_examples/migrations/: 0001_initial.py
Auth/apps/testing_examples/selectors/: schools.py
Auth/apps/testing_examples/services/: students.py
Auth/apps/token/: admin.py  apps.py  backends.py  models.py  paseto.py  rsa_key.py  serializers.py  tokens.py  views.py
Auth/apps/token/migrations/: 0001_initial.py  0002_authtoken_alter_rsakey_private_alter_rsakey_public_and_more.py  0003_authtoken_jti_alter_authtoken_exp.py  0004_alter_authtoken_exp.py  0005_alter_authtoken_exp.py  0006_alter_authtoken_exp.py
Auth/apps/users/: admin.py  apis.py  filters.py  forms.py  models.py  selectors.py  services.py
Auth/apps/users/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name.py  0003_alter_user_managers_remove_address_unique_address_and_more.py  0004_alter_profile_user.py  0005_remove_profile_is_deleted.py  0006_alter_profile_status.py
Auth/apps/users/tests/services/: test_user_create.py
Auth/settings/: env.py  urls.py
Auth/settings/django/: base.py  settings.py
Auth/settings/others/: celery.py  drf.py  files_and_storages.py  jwt.py  sentry.py
Auth/settings/others/debug_toolbar/: settings.py
(+2 files in other folders)
