[tool.poetry]
name = "Auth"
version = "0.1.0"
description = "Main User System And Auth Service"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
requests = "^2.28.2"
whitenoise = "^6.3.0"
python-dotenv = "^0.21.1"
django-countries = "^7.5.1"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
