[tool.poetry]
name = "Auth"
version = "0.1.0"
description = "Main User System And Auth Service"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^22.2.0"
celery = "^5.2.7"
boto3 = "^1.26.64"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
requests = "^2.28.2"
whitenoise = "^6.3.0"
sentry-sdk = "^1.14.0"
django-filter = "^22.1"
django-environ = "^0.9.0"
django-countries = "^7.5.1"
django-storages = "^1.13.2"
django-extensions = "^3.2.1"
django-celery-beat = "^2.4.0"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
django-celery-results = "^2.4.0"
djangorestframework-simplejwt = "^5.2.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
